# rp-pico-starter-project

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
